feat/llm-api-keys: init controller
