# api/openapi.yml
@@ -198,8 +198,12 @@ paths:
                     format: uuid
                   name:
                     type: string
-                  value:
+                  valueFirstTen:
                     type: string
+                    description: "The first 10 characters of the API key."
+                  valueLastSix:
+                    type: string
+                    description: "The last 6 characters of the API key."
                   createdAt:
                     type: string
                     format: date-time
